--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -5,7 +5,8 @@ on: push
 jobs:
   build-and-release:
     runs-on: macos-latest
-    
+    permissions:
+      contents: write
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
